--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,30 +2,69 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-8">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="~/Assets/images/sample.jpg" alt="Slide1">
+                        <div class="carousel-caption">
+                            <h3>Caption</h3>
+                            <p>More Caption!</p>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <img src="~/images/sample.jpg" alt="Slide2">
+                        <div class="carousel-caption">
+                            <h3>Caption</h3>
+                            <p>More caption!</p>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <img src="~/images/sample.jpg" alt="Slide3">
+                        <div class="carousel-caption">
+                            <h3>Caption</h3>
+                            <p>More caption!</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <h2>About</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vivamus blandit ut urna a cursus. Nunc semper lacinia enim vel
+                dapibus. Nullam consectetur, nunc nec malesuada iaculis, eros
+                ipsum auctor dolor, eu fringilla arcu nunc id metus. Curabitur
+                viverra aliquam erat ac gravida. Vestibulum ultrices aliquet rutrum.
+                In hac habitasse platea. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vivamus blandit ut urna a cursus. Nunc semper lacinia enim vel
+                dapibus. Nullam consectetur, nunc nec malesuada iaculis, eros
+                ipsum auctor dolor, eu fringilla arcu nunc id metus. Curabitur
+                viverra aliquam erat ac gravida. Vestibulum ultrices aliquet rutrum.
+                In hac habitasse platea.
+            </p>
+        </div>
     </div>
 </div>
