--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="container-fluid">
+<div class="container-fluid" style="margin-top:20px">
     <div class="row">
         <div class="col-sm-8">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -24,7 +24,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="~/images/sample.jpg" alt="Slide2">
+                        <img src="~/Assets/images/sample.jpg" alt="Slide2">
                         <div class="carousel-caption">
                             <h3>Caption</h3>
                             <p>More caption!</p>
@@ -32,7 +32,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="~/images/sample.jpg" alt="Slide3">
+                        <img src="~/Assets/images/sample.jpg" alt="Slide3">
                         <div class="carousel-caption">
                             <h3>Caption</h3>
                             <p>More caption!</p>
@@ -41,11 +41,9 @@
                 </div>
                 <!-- Left and right controls -->
                 <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
                     <span class="sr-only">Previous</span>
                 </a>
                 <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
