--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,75 +2,74 @@
     ViewBag.Title = "Home Page";
 }
 <html>
-    <head>
-        <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    </head>
-    <body>
-        <div class="container-fluid" style="margin-top:20px">
-            <div class="row">
-                <div class="col-sm-8">
-                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                        <!-- Indicators -->
-                        <ol class="carousel-indicators">
-                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#myCarousel" data-slide-to="1"></li>
-                            <li data-target="#myCarousel" data-slide-to="2"></li>
-                        </ol>
+<body>
+    <div class="container-fluid mt-20">
+        <div class="row">
+            <div class="col-sm-8">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
 
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner">
-                            <div class="item active">
-                                <img src="~/Assets/images/sample.jpg" alt="Slide1">
-                                <div class="carousel-caption">
-                                    <h3>Caption</h3>
-                                    <p>More Caption!</p>
-                                </div>
-                            </div>
-
-                            <div class="item">
-                                <img src="~/Assets/images/sample.jpg" alt="Slide2">
-                                <div class="carousel-caption">
-                                    <h3>Caption</h3>
-                                    <p>More caption!</p>
-                                </div>
-                            </div>
-
-                            <div class="item">
-                                <img src="~/Assets/images/sample.jpg" alt="Slide3">
-                                <div class="carousel-caption">
-                                    <h3>Caption</h3>
-                                    <p>More caption!</p>
-                                </div>
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src="~/Assets/images/sample.jpg" alt="Slide1">
+                            <div class="carousel-caption">
+                                <h3>Caption</h3>
+                                <p>More Caption!</p>
                             </div>
                         </div>
-                        <!-- Left and right controls -->
-                        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                            <span class="glyphicon glyphicon-chevron-left"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                            <span class="glyphicon glyphicon-chevron-right"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
+
+                        <div class="item">
+                            <img src="~/Assets/images/sample.jpg" alt="Slide2">
+                            <div class="carousel-caption">
+                                <h3>Caption</h3>
+                                <p>More caption!</p>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <img src="~/Assets/images/sample.jpg" alt="Slide3">
+                            <div class="carousel-caption">
+                                <h3>Caption</h3>
+                                <p>More caption!</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-4">
-                    <h2>About</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Vivamus blandit ut urna a cursus. Nunc semper lacinia enim vel
-                        dapibus. Nullam consectetur, nunc nec malesuada iaculis, eros
-                        ipsum auctor dolor, eu fringilla arcu nunc id metus. Curabitur
-                        viverra aliquam erat ac gravida. Vestibulum ultrices aliquet rutrum.
-                        In hac habitasse platea. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Vivamus blandit ut urna a cursus. Nunc semper lacinia enim vel
-                        dapibus. Nullam consectetur, nunc nec malesuada iaculis, eros
-                        ipsum auctor dolor, eu fringilla arcu nunc id metus. Curabitur
-                        viverra aliquam erat ac gravida. Vestibulum ultrices aliquet rutrum.
-                        In hac habitasse platea.
-                    </p>
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
+            <div class="col-sm-4">
+                <h2>About</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Vivamus blandit ut urna a cursus. Nunc semper lacinia enim vel
+                    dapibus. Nullam consectetur, nunc nec malesuada iaculis, eros
+                    ipsum auctor dolor, eu fringilla arcu nunc id metus. Curabitur
+                    viverra aliquam erat ac gravida. Vestibulum ultrices aliquet rutrum.
+                    In hac habitasse platea. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Vivamus blandit ut urna a cursus. Nunc semper lacinia enim vel
+                    dapibus. Nullam consectetur, nunc nec malesuada iaculis, eros
+                    ipsum auctor dolor, eu fringilla arcu nunc id metus. Curabitur
+                    viverra aliquam erat ac gravida. Vestibulum ultrices aliquet rutrum.
+                    In hac habitasse platea.
+                </p>
+            </div>
         </div>
-    </body>
+    </div>
+
+    @Styles.Render("~/Assets/css/index")
+</body>
 </html>
