implement university list page

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li> 
                     <li>@Html.ActionLink("Log In", "About", "Home")</li>
                     <li>@Html.ActionLink("Sign up", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("University List", "UniversityList", "UniversityList")</li>
                 </ul>
             </div>
         </div>
