--- a/Views/UniversityList/UniversityList.cshtml
+++ b/Views/UniversityList/UniversityList.cshtml
@@ -1,18 +1,16 @@
 ﻿@using Advisor.Models
 @{ 
-    ViewBag.Title = "UniversityList page";
+    ViewBag.Title = "Universities";
 }
-<div class="row" style="padding-top: 20px;">
-    <div align="center">
-        <h3 class="col-md-12" style="margin-bottom: 20px">What university are you interested in at the moment?</h3>
-        <input class="form-control" type="text" id="Search" placeholder="Search" style="width: 100%" />
-        <br />
-        <select class="form-control" id="universityList" name="universityList" size="10" style="width: 100%;">
+<div class="w-100 mt-100 d-flex justify-content-center">
+    <div class="w-50">
+        <h3 class="mb-md-5 m-auto">What university are you interested in at the moment?</h3>
+        <input class="form-control w-100 mt-20 mb-20" type="text" id="Search" placeholder="Search" />
+        <select class="form-control w-100 mt-md-5" name="university" size="10">
             @foreach (University uni in ViewBag.universities)
             {
-                <option>@uni</option>
+                <option value="@uni.Id">@uni</option>
             }
         </select>
-        
     </div>
 </div>
