--- a/Assets/css/layout.css
+++ b/Assets/css/layout.css
@@ -1,4 +1,29 @@
-﻿.mt-20 {
+﻿body {
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
+
+/* Set padding to keep content from hitting the edges */
+.body-content {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+/* Override the default bootstrap behavior where horizontal description lists 
+   will truncate terms that are too long to fit in the left column 
+*/
+.dl-horizontal dt {
+    white-space: normal;
+}
+
+/* Set width on the form input elements since they're 100% wide by default */
+input,
+select,
+textarea {
+    max-width: 280px;
+}
+
+.mt-20 {
     margin-top: 20px;
 }
 
@@ -12,6 +37,10 @@
 
 .w-50 {
     width: 50%;
+}
+
+.m-w-unset {
+    max-width: unset;
 }
 
 .m-auto {
