--- a/Views/UniversityList/UniversityList.cshtml
+++ b/Views/UniversityList/UniversityList.cshtml
@@ -5,8 +5,8 @@
 <div class="w-100 mt-100 d-flex justify-content-center">
     <div class="w-50">
         <h3 class="mb-md-5 m-auto">What university are you interested in at the moment?</h3>
-        <input class="form-control w-100 mt-20 mb-20" type="text" id="Search" placeholder="Search" />
-        <select class="form-control w-100 mt-md-5" name="university" size="10">
+        <input class="form-control w-100 mt-20 mb-20 m-w-unset" type="text" id="Search" placeholder="Search" />
+        <select class="form-control w-100 mt-md-5 m-w-unset" name="university" size="10">
             @foreach (University uni in ViewBag.universities)
             {
                 <option value="@uni.Id">@uni</option>
