--- a/Assets/css/layout.css
+++ b/Assets/css/layout.css
@@ -1,4 +1,7 @@
 ﻿body {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     padding-top: 50px;
     padding-bottom: 20px;
 }
@@ -27,12 +30,20 @@ textarea {
     margin-top: 20px;
 }
 
+.mt-50 {
+    margin-top: 50px;
+}
+
 .mt-100 {
     margin-top: 100px;
 }
 
 .mb-20 {
     margin-bottom: 20px;
+}
+
+.mr-5 {
+    margin-right: 5px;
 }
 
 .w-50 {
@@ -51,6 +62,27 @@ textarea {
     display: flex;
 }
 
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
 .justify-content-center {
     justify-content: center;
+}
+
+.align-items-center {
+    align-items: center;
+}
+
+.card {
+    border-radius: 3px;
+    margin: 10px;
+    padding: 10px;
+    box-shadow: 3px 5px 15px 2px rgba(0,0,0,0.1)
+}
+
+.card:hover {
+    background: #f7f7f7;
+    box-shadow: 3px 5px 15px 2px rgba(0,0,0,0.3);
+    border: 0;
 }
