--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - University Advisor</title>
-    @Styles.Render("~/Assets/css")
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
+    @Styles.Render("~/bundles/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    @RenderSection("stylesheets", required: false)
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -21,7 +22,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink("Universities", "UniversityList", "UniversityList")</li>
+                    <li><a href="@Url.RouteUrl("universities_page")">Universties</a></li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -30,9 +31,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - MPGGL</p>
-        </footer>
+        @Html.Partial("_FooterPartial")
     </div>
 
     @Scripts.Render("~/bundles/jquery")
