--- a/Views/University/University.cshtml
+++ b/Views/University/University.cshtml
@@ -2,24 +2,25 @@
 @{
     ViewBag.Title = "Universities";
 }
-    <div class="w-100">
-        <div class="container">
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6">
             <h1><i class="fas fa-graduation-cap"></i>  @ViewBag.University.Title</h1>
-            <div class="row">
-                <div class="col-sm-6">
-                    <h3>About</h3>
-                    <div class="about-section">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                    </div>
-                </div>
-                </div>
+            <h3>About</h3>
+            <div class="about-section">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
             </div>
         </div>
-     
+        <div class="col-sm-6">
+            <h3>  </h3>
+            <iframe src="https://maps.google.com/maps?q=mif%20&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+    </div>
+</div>
