--- a/Views/University/University.cshtml
+++ b/Views/University/University.cshtml
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-sm-6">
             <h3>About</h3>
-            <div class="about-section">
+            <div class="about-section" style="height:165px">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -34,15 +34,46 @@
                     </tr>
                 </tbody>
             </table>
+            <a href="#"><p>Compare with other universities</p></a>
         </div>
-        <div class="col-sm-6" style="margin-top:20px">
-       
-            <iframe src="https://maps.google.com/maps?q=mif%20&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <div class="col-sm-6" style="margin-top:20px">
+
+                <iframe src="https://maps.google.com/maps?q=mif%20&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="400" frameborder="0" style="border:0; margin-top:5px" allowfullscreen></iframe>
+            </div>
         </div>
-    </div>
     <div class="row">
         <div class="col-sm-6">
-           
+
+            <h3>Faculties</h3>
+            <div class="d-flex flex-wrap">
+                @foreach (Faculty faculty in ViewBag.Faculties)
+                {
+                <div class="university-container card">
+                    <h4>@faculty.Title</h4>
+                    <div class="d-flex">
+                        <div class="d-flex mr-5">
+                            <p class="mr-5">
+                                <i class="fas fa-book-open"></i>
+                            </p>
+                            <p class="mr-5">
+                                @faculty.StudyPrograms.Count study programs
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                }
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <h3>Dorms</h3>
+            <div class="university-container card">
+                <h4>Miau</h4>
+                <div class="d-flex">
+                    <div class="d-flex mr-5">
+                       
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
