--- a/Views/University/University.cshtml
+++ b/Views/University/University.cshtml
@@ -49,7 +49,9 @@
                 {
                     <!--TODO: add link to faculty view-->
                 <div class="faculty-container card">
-                    <h4>@faculty.Title</h4>
+                    <a href="@Url.RouteUrl("faculty_page",  new { id = faculty.Id })">
+                        <h4>@faculty.Title</h4>
+                    </a>
                     <div class="d-flex">
                         <div class="d-flex mr-5">
                             <p class="mr-5">
