--- a/Views/Faculty.cshtml
+++ b/Views/Faculty.cshtml
@@ -3,5 +3,22 @@
     ViewBag.Title = "Faculty";
 }
 
-<h2>Faculty</h2>
+<h2><i class="fas fa-university"></i>  Title</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6">
+            <h3>About</h3>
+            <div class="about-section">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 
