Added map and stats to faculty view
added map and stats

--- a/Views/Faculty.cshtml
+++ b/Views/Faculty.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Faculty";
 }
 
-<h2><i class="fas fa-university"></i>  Title</h2>
+<h2><i class="fas fa-university"></i>  Faculty of mathematics and informatics</h2>
 <div class="container">
     <div class="row">
         <div class="col-sm-6">
@@ -18,7 +18,35 @@
                     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </div>
+            <h3>Statistics</h3>
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <th scope="row">Overall rating</th>
+                        <td>#</td>
+                    </tr>
+                    <tr>
+                        <th># of study programs</th>
+                        <td>#</td>
+                    </tr>
+                    <tr>
+                        <th>Level of satisfaction</th>
+                        <td>#</td>
+                    </tr>
+                    <tr>
+                        <th>Average alumni salary</th>
+                        <td>#</td>
+                    </tr>
+                    <tr>
+                        <th>% of graduates working in relevant industry</th>
+                        <td>#</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-    </div>
+        <div class="col-sm-6">
+            <iframe class="faculty-map" src="https://maps.google.com/maps?q=mif%20&t=&z=13&ie=UTF8&iwloc=&output=embed" allowfullscreen></iframe>
+            <a class="compare-link" href="#"><h4>Compare with other faculties<i class="fas fa-arrow-right"></i></h4></a>
+        </div>
 </div>
 
