--- a/Assets/css/faculty.css
+++ b/Assets/css/faculty.css
@@ -4,3 +4,8 @@
     padding: 6px;
     box-shadow: 3px 5px 15px 2px rgba(0,0,0,0.1);
 }
+.faculty-map {
+    height: 420px;
+    width: 100%;
+    border: 0;
+}
