--- a/Views/Faculty.cshtml
+++ b/Views/Faculty.cshtml
@@ -1,21 +1,16 @@
-﻿
+﻿@using Advisor.Models
 @{
     ViewBag.Title = "Faculty";
 }
 
-<h2><i class="fas fa-university"></i>  Faculty of mathematics and informatics</h2>
+<h2><i class="fas fa-university"></i>  @ViewBag.Faculty.Title</h2>
 <div class="container">
     <div class="row">
         <div class="col-sm-6">
             <h3>About</h3>
             <div class="about-section">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    @ViewBag.Faculty.Description
                 </p>
             </div>
             <h3>Statistics</h3>
@@ -48,26 +43,30 @@
             <iframe class="faculty-map" src="https://maps.google.com/maps?q=mif%20&t=&z=13&ie=UTF8&iwloc=&output=embed" allowfullscreen></iframe>
             <a class="compare-link" href="#"><h4>Compare with other faculties<i class="fas fa-arrow-right"></i></h4></a>
         </div>
-   </div>
+    </div>
     <div class="row">
-        <h3>Study programs</h3>
-        <div class="d-flex flex-wrap">
-            @for (int i = 0; i < 4; i++)
-            {
-                <div class="studyprogram-container card">
-                    <h4>Title</h4>
-                    <div class="d-flex">
-                        <div class="d-flex mr-5">
-                            <p class="mr-5">
-                                <i class="fas fa-star"></i>
-                            </p>
-                            <p class="mr-5">
-                                Rating #
-                            </p>
+        <div class="col-sm-12">
+            <h3>Study programs</h3>
+            <div class="d-flex flex-wrap">
+                @foreach (StudyProgram studyProgram in ViewBag.Faculty.StudyPrograms)
+                {
+                    <div class="studyprogram-container card">
+                        <a href="#">
+                            <h4>@studyProgram.Title</h4>
+                        </a>
+                        <div class="d-flex">
+                            <div class="d-flex mr-5">
+                                <p class="mr-5">
+                                    <i class="fas fa-star"></i>
+                                </p>
+                                <p class="mr-5">
+                                    Rating #
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            }
+                }
+            </div>
         </div>
     </div>
 </div>
