--- a/Views/Faculty.cshtml
+++ b/Views/Faculty.cshtml
@@ -18,23 +18,23 @@
                 <tbody>
                     <tr>
                         <th scope="row">Overall rating</th>
-                        <td>#</td>
+                        <td>@ViewBag.StatsData.OverallRating</td>
                     </tr>
                     <tr>
                         <th># of study programs</th>
-                        <td>#</td>
+                        <td>@ViewBag.StatsData.StudyProgramCount</td>
                     </tr>
                     <tr>
                         <th>Level of satisfaction</th>
-                        <td>#</td>
+                        <td>@ViewBag.StatsData.Satisfaction</td>
                     </tr>
                     <tr>
                         <th>Average alumni salary</th>
-                        <td>#</td>
+                        <td>@ViewBag.StatsData.AverageSalary</td>
                     </tr>
                     <tr>
                         <th>% of graduates working in relevant industry</th>
-                        <td>#</td>
+                        <td>@ViewBag.StatsData.RelevantIndustryPercentage</td>
                     </tr>
                 </tbody>
             </table>
