--- a/Assets/css/layout.css
+++ b/Assets/css/layout.css
@@ -1,61 +1,61 @@
 ﻿body {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  padding-top: 50px;
-  padding-bottom: 20px;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    padding-top: 50px;
+    padding-bottom: 20px;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-  padding-left: 15px;
-  padding-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
 .dl-horizontal dt {
-  white-space: normal;
+    white-space: normal;
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
 textarea {
-  max-width: 280px;
+    max-width: 280px;
 }
 
 .mt-20 {
-  margin-top: 20px;
+    margin-top: 20px;
 }
 
 .mt-50 {
-  margin-top: 50px;
+    margin-top: 50px;
 }
 
 .mt-100 {
-  margin-top: 100px;
+    margin-top: 100px;
 }
 
 .mb-20 {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .mr-5 {
-  margin-right: 5px;
+    margin-right: 5px;
 }
 
 .w-50 {
-  width: 50%;
+    width: 50%;
 }
 
 .m-w-unset {
-  max-width: unset;
+    max-width: unset;
 }
 
 .m-auto {
-  margin: auto;
+    margin: auto;
 }
 
 .m-0 {
@@ -66,35 +66,40 @@ textarea {
     padding: 0;
 }
 
+.ph-10 {
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
 .d-flex {
-  display: flex;
+    display: flex;
 }
 
 .flex-wrap {
-  flex-wrap: wrap;
+    flex-wrap: wrap;
 }
 
 .justify-content-center {
-  justify-content: center;
+    justify-content: center;
 }
 
 .align-items-center {
-  align-items: center;
+    align-items: center;
 }
 
 .card {
-  border-radius: 3px;
-  margin: 10px;
-  padding: 10px;
-  box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
+    margin: 10px;
+    padding: 10px;
+    box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.1);
 }
 
 .card:hover {
-  background: #f7f7f7;
-  box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.3);
-  border: 0;
+    background: #f7f7f7;
+    box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.3);
+    border: 0;
 }
 
 .list-none {
-  list-style-type: none;
+    list-style-type: none;
 }
