--- a/Assets/css/comparison.css
+++ b/Assets/css/comparison.css
@@ -1,10 +1,11 @@
 ﻿.input-dropdown {
     position: absolute;
-    width: 280px;
+    width: 340px;
     background: white;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
     box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.1);
+    z-index: 1;
 }
 
 .search-item {
