Changed prop to local instance.

--- a/Views/Faculty.cshtml
+++ b/Views/Faculty.cshtml
@@ -18,7 +18,7 @@
                 <tbody>
                     <tr>
                         <th scope="row">Overall rating</th>
-                        <td>@ViewBag.StatsData.OverallRating</td>
+                        <td>@ViewBag.StatsData.OveralRating</td>
                     </tr>
                     <tr>
                         <th># of study programs</th>
