Fixed typo in Universities

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="@Url.RouteUrl("universities_page")">Universties</a></li>
+                    <li><a href="@Url.RouteUrl("universities_page")">Universities</a></li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
