--- a/Assets/css/comparison.css
+++ b/Assets/css/comparison.css
@@ -6,6 +6,8 @@
     border-bottom-right-radius: 3px;
     box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.1);
     z-index: 1;
+    max-height: 300px;
+    overflow-y: scroll;
 }
 
 .search-item {
