Add correct link to comparison page.

--- a/Views/Faculty.cshtml
+++ b/Views/Faculty.cshtml
@@ -41,7 +41,7 @@
         </div>
         <div class="col-sm-6">
             <iframe class="faculty-map" src="https://maps.google.com/maps?q=mif%20&t=&z=13&ie=UTF8&iwloc=&output=embed" allowfullscreen></iframe>
-            <a class="compare-link" href="#"><h4>Compare with other faculties<i class="fas fa-arrow-right"></i></h4></a>
+            <a class="compare-link" href="@Url.RouteUrl("compare")"><h4>Compare with other faculties<i class="fas fa-arrow-right"></i></h4></a>
         </div>
     </div>
     <div class="row">
