--- a/Views/University/University.cshtml
+++ b/Views/University/University.cshtml
@@ -17,7 +17,7 @@
                     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </div>
-            <a class="compare-link" href="#"><h4>Compare with other universities <i class="fas fa-arrow-right"></i></h4></a>
+            <a class="compare-link" href="@Url.RouteUrl("compare")"><h4>Compare with other universities <i class="fas fa-arrow-right"></i></h4></a>
         </div>
         <div class="col-sm-6">
             <h3>Statistics</h3>
