--- a/Views/StudyProgram/StudyProgram.cshtml
+++ b/Views/StudyProgram/StudyProgram.cshtml
@@ -3,4 +3,70 @@
     ViewBag.Title = "Study Program";
 }
 
-<h2><i class="fas fa-studyProgram"></i>  @ViewBag.StudyProgram.Title</h2>
+<h2><i class="fas fa-book"></i>  @ViewBag.StudyProgram.Title</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6">
+            <h3>Description</h3>
+            <div class="about-section">
+                <p>
+                    @ViewBag.StudyProgram.Description
+                </p>
+            </div>
+            <a class="compare-link" href="#"><h4>Compare with other study programs<i class="fas fa-arrow-right"></i></h4></a>
+        </div>
+        <div class="col-sm-6">
+            <h3>Statistics</h3>
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <th scope="row">Overall rating</th>
+                        <td>@ViewBag.StatsData.OveralRating/10</td>
+                    </tr>
+                    <tr>
+                        <th>Level of satisfaction</th>
+                        <td>@ViewBag.StatsData.Satisfaction/10</td>
+                    </tr>
+                    <tr>
+                        <th>Average graduate salary</th>
+                        <td>@ViewBag.StatsData.AverageSalary€</td>
+                    </tr>
+                    <tr>
+                        <th>Percentage of graduates working in relevant industry</th>
+                        <td>@ViewBag.StatsData.RelevantIndustryPercentage%</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <h3>Reviews (@ViewBag.StatsData.ReviewCount)</h3>
+                <div class="d-flex flex-wrap">
+                    @foreach (Review review in ViewBag.StudyProgram.Reviews)
+                    {
+                        <div class="review-container card">
+                            <h4>@review.User.Name</h4>
+                            <div class="d-flex">
+                                <div class="d-flex mr-5">
+                                    <p class="mr-5">
+                                        <i class="fas fa-star"></i>
+                                    </p>
+                                    <p class="mr-5">
+                                        Rating @review.OveralRating /10
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="d-flex">
+                                <div class="d-flex mr-5">
+                                    @review.Text
+                                </div>
+                            </div>
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
+
+
