--- a/Assets/css/layout.css
+++ b/Assets/css/layout.css
@@ -58,6 +58,19 @@ textarea {
     margin: auto;
 }
 
+.m-0 {
+    margin: 0;
+}
+
+.p-0 {
+    padding: 0;
+}
+
+.ph-10 {
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
 .d-flex {
     display: flex;
 }
@@ -78,11 +91,23 @@ textarea {
     border-radius: 3px;
     margin: 10px;
     padding: 10px;
-    box-shadow: 3px 5px 15px 2px rgba(0,0,0,0.1)
+    box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.1);
 }
 
 .card:hover {
     background: #f7f7f7;
-    box-shadow: 3px 5px 15px 2px rgba(0,0,0,0.3);
+    box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.3);
     border: 0;
+}
+
+.list-none {
+    list-style-type: none;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.gray {
+    color: #5f5f5f;
 }
