display stats data in university page

--- a/Views/University/University.cshtml
+++ b/Views/University/University.cshtml
@@ -25,27 +25,27 @@
                 <tbody>
                     <tr>
                         <th scope="row">Overall rating</th>
-                        <td>#</td>
+                        <td>@ViewBag.StatsData.OveralRating</td>
                     </tr>
                     <tr>
                         <th scope="row"># of faculties</th>
-                        <td>#</td>
+                        <td>@ViewBag.StatsData.FacultyCount</td>
                     </tr>
                     <tr>
                         <th># of study programs</th>
-                        <td>#</td>
+                        <td>@ViewBag.StatsData.StudyProgramCount</td>
                     </tr>
                     <tr>
                         <th>Level of satisfaction</th>
-                        <td>#</td>
+                        <td>@ViewBag.StatsData.Satisfaction</td>
                     </tr>
                     <tr>
                         <th>Average alumni salary</th>
-                        <td>#</td>
+                        <td>@ViewBag.StatsData.AverageSalary</td>
                     </tr>
                     <tr>
                         <th>% of graduates working in relevant industry</th>
-                        <td>#</td>
+                        <td>@ViewBag.StatsData.RelevantIndustryPercentage</td>
                     </tr>
                 </tbody>
             </table>
