Updated format of statistics in university.cshtml

--- a/Views/University/University.cshtml
+++ b/Views/University/University.cshtml
@@ -25,27 +25,27 @@
                 <tbody>
                     <tr>
                         <th scope="row">Overall rating</th>
-                        <td>@ViewBag.StatsData.OveralRating</td>
+                        <td>@ViewBag.StatsData.OveralRating/10</td>
                     </tr>
                     <tr>
-                        <th scope="row"># of faculties</th>
+                        <th scope="row">Number of faculties</th>
                         <td>@ViewBag.StatsData.FacultyCount</td>
                     </tr>
                     <tr>
-                        <th># of study programs</th>
+                        <th>Number of study programs</th>
                         <td>@ViewBag.StatsData.StudyProgramCount</td>
                     </tr>
                     <tr>
                         <th>Level of satisfaction</th>
-                        <td>@ViewBag.StatsData.Satisfaction</td>
+                        <td>@ViewBag.StatsData.Satisfaction/10</td>
                     </tr>
                     <tr>
-                        <th>Average alumni salary</th>
-                        <td>@ViewBag.StatsData.AverageSalary</td>
+                        <th>Average graduate salary</th>
+                        <td>@ViewBag.StatsData.AverageSalary€</td>
                     </tr>
                     <tr>
-                        <th>% of graduates working in relevant industry</th>
-                        <td>@ViewBag.StatsData.RelevantIndustryPercentage</td>
+                        <th>Percentage of graduates working in relevant industry</th>
+                        <td>@ViewBag.StatsData.RelevantIndustryPercentage%</td>
                     </tr>
                 </tbody>
             </table>
