Branch#99 (Reformating of statistics) (#81)
* Updated format of statistics in university.cshtml

* Updated format of statistics in Faculty.cshtml

* Duplicated faculty count near faculty label in university.cshtml

--- a/Views/University/University.cshtml
+++ b/Views/University/University.cshtml
@@ -25,27 +25,28 @@
                 <tbody>
                     <tr>
                         <th scope="row">Overall rating</th>
-                        <td>@ViewBag.StatsData.OveralRating</td>
+                        <td>@ViewBag.StatsData.OveralRating/10</td>
                     </tr>
+                    <!-- Consider moving this near faculty label and removing it from here-->
                     <tr>
-                        <th scope="row"># of faculties</th>
+                        <th scope="row">Number of faculties</th>
                         <td>@ViewBag.StatsData.FacultyCount</td>
                     </tr>
                     <tr>
-                        <th># of study programs</th>
+                        <th>Number of study programs</th>
                         <td>@ViewBag.StatsData.StudyProgramCount</td>
                     </tr>
                     <tr>
                         <th>Level of satisfaction</th>
-                        <td>@ViewBag.StatsData.Satisfaction</td>
+                        <td>@ViewBag.StatsData.Satisfaction/10</td>
                     </tr>
                     <tr>
-                        <th>Average alumni salary</th>
-                        <td>@ViewBag.StatsData.AverageSalary</td>
+                        <th>Average graduate salary</th>
+                        <td>@ViewBag.StatsData.AverageSalary€</td>
                     </tr>
                     <tr>
-                        <th>% of graduates working in relevant industry</th>
-                        <td>@ViewBag.StatsData.RelevantIndustryPercentage</td>
+                        <th>Percentage of graduates working in relevant industry</th>
+                        <td>@ViewBag.StatsData.RelevantIndustryPercentage%</td>
                     </tr>
                 </tbody>
             </table>
@@ -54,11 +55,10 @@
     <div class="row">
         <div class="col-sm-6">
             <!--TODO: Add method in controller-->
-            <h3>Faculties</h3>
+            <h3>Faculties (@ViewBag.StatsData.FacultyCount)</h3>
             <div class="d-flex flex-wrap">
                 @foreach (Faculty faculty in ViewBag.University.Faculties)
                 {
-                    <!--TODO: add link to faculty view-->
                 <div class="faculty-container card">
                     <a href="@Url.RouteUrl("faculty_page", new { id = faculty.Id})">
                         <h4>@faculty.Title</h4>
@@ -79,7 +79,7 @@
         </div>
         <div class="col-sm-6">
             <!--TODO: Add method in controller-->
-            <h3>Dormitories</h3>
+            <h3>Dormitories (#)</h3>
             <div class="d-flex flex-wrap">
                 @for (int i = 0; i < 4; i++)
                 {
