--- a/Views/Review.cshtml
+++ b/Views/Review.cshtml
@@ -3,5 +3,33 @@
     ViewBag.Title = "Review";
 }
 
-<h2>Review</h2>
+    <html>
+    <body>
+        <h2>Leave a review</h2>
+        <ul class="nav nav-tabs">
+            <li class="active">
+                <a href="#studyProgramTab" data-toggle="tab">Study Program</a>
+            </li>
+            <li>
+                <a href="#courseTab" data-toggle="tab">Course</a>
+            </li>
+            <li>
+                <a href="#lecturerTab" data-toggle="tab">Lecturer</a>
+            </li>
+        </ul>
+
+        <div class="tab-content">
+            <div id="studyProgramTab" class="tab-pane active">
+                <h3>Study program</h3>
+            </div>
+            <div id="courseTab" class="tab-pane">
+                <h3>Course</h3>
+            </div>
+            <div id="lecturerTab" class="tab-pane">
+                <h3>Lecturer</h3>
+            </div>
+        </div>
+
+    </body>
+    </html>
 
